<resources>
    <string name="app_name">Aggralarm</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="wake_up">Wake up</string>
    <string name="no_quest">No quest</string>
    <string name="math_quest">Math quest</string>
    <string name="shake_quest">Shake quest</string>
    <string name="quest">Quest</string>
    <string name="repeat">Repeat</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="label_word">Label</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
</resources>