<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Added Time picker just to pick the alarm time-->
    <!--gravity is aligned to center-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:subtitleTextColor="#FFFFFF"
        app:titleTextColor="#FFFFFF"
        app:theme="@style/ToolbarTheme" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:background="#00aaaaaa"
            android:layout_gravity="right"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/DeleteButton"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00aaaaaa"
                android:onClick="OnDeleteClicked"
                app:srcCompat="@android:drawable/ic_menu_delete" />

            <ImageButton
                android:id="@+id/SaveButton"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00aaaaaa"
                android:onClick="OnSaveClicked"
                app:srcCompat="@android:drawable/ic_menu_save" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:addStatesFromChildren="false"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_word" />

            <EditText
                android:id="@+id/alarmLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/wake_up" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbNoQuest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/no_quest" />

                <RadioButton
                    android:id="@+id/rbMathQuest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/math_quest" />

                <RadioButton
                    android:id="@+id/rbShakeQuest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shake_quest" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monday" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuesday" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wednesday" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thursday" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friday" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saturday" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sunday" />

        </LinearLayout>
    </ScrollView>

    <!--Added Toggle Button to set the alarm on or off-->
    <!--ByDefault toggleButton is set to false-->

    <!--"OnToggleClicked" method will be implemented in MainActivity.java -->

</LinearLayout>